--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <h2>Get insights that help your business grow.</h2>
     <h4>Discver the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</h4>
     <h2>10k+ COMPANIES 314 TEMPLATES 12M+ QUERIES</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, provident.</p>
         </div>
     </section>
     <!-- <h2>Get <div class="tech">insights</div> that help your business grow.</h2>
